--- a/index.html
+++ b/index.html
@@ -62,6 +62,6 @@ html {
   </head>
   <body>
     <div id='root'></div>
-    <script src="/static/bundle.js"></script>
+    <script src="/static/chess.js"></script>
   </body>
 </html>
