--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ html {
     </style>
   </head>
   <body>
-    <div id='root'></div>
-    <script src="/static/chess.js"></script>
+    <div id="root"></div>
+    <script src="/chess.js"></script>
   </body>
 </html>
